--- a/taxis.ipynb
+++ b/taxis.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Beijing](img-beijing.png)"
+    "![Beijing](data/img-beijing.png)"
    ]
   },
   {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -80,8 +80,8 @@
     "\n",
     "# FYI this takes a minute...\n",
     "    \n",
-    "# Assuming file directories are placed in directory ./t-drive-sample/\n",
-    "path = r'./t-drive-sample-part*/0*/'\n",
+    "# Assuming files are unzipped\n",
+    "path = r'./data/t-drive-sample-part*/0*/'\n",
     "taxi_files = glob.glob(os.path.join(path, \"*.txt\"))   \n",
     "column_names = ['taxi_id', 'date_time', 'longitude', 'latitude']\n",
     "df_master = pd.concat(pd.read_csv(f, names=column_names) for f in taxi_files)  # glue all data into the dataframe\n",
@@ -91,7 +91,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17762489"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_master)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -319,7 +341,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](img-paper.jpg)"
+    "![title](data/img-paper.jpg)"
    ]
   },
   {
@@ -402,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![title](img-paper.jpg)"
+    "![title](data/img-paper.jpg)"
    ]
   },
   {
@@ -558,7 +580,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
